--- a/package.json
+++ b/package.json
@@ -63,6 +63,10 @@
     "validate-branch-name": "^1.3.0",
     "zod": "^3.22.4"
   },
+  "validate-branch-name": {
+    "pattern": "^(master|develop){1}$|^(feature|fix|hotfix|release)/.+$",
+    "errorMsg": "Invalid branch name. Branch names must start with 'master/' or 'develop/' for main branches, or 'feature/', 'fix/', 'hotfix/', or 'release/' for feature branches."
+  },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
