--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "semi": false,
   "tabWidth": 2,
   "printWidth": 80,
-  "singleQuote": true,
+  "singleQuote": false,
   "jsxSingleQuote": true,
   "trailingComma": "es5",
   "bracketSpacing": true,
