--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "printWidth": 80,
   "singleQuote": true,
   "jsxSingleQuote": true,
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "bracketSpacing": true,
   "endOfLine": "lf",
   "plugins": ["prettier-plugin-tailwindcss"]
