--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "admin",
   "private": true,
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,7 +13,8 @@
     "format": "prettier --write .",
     "prepare": "husky install",
     "lint-staged": "lint-staged",
-    "validate-branch": "validate-branch-name"
+    "validate-branch": "validate-branch-name",
+    "release": "standard-version"
   },
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": [
@@ -86,6 +87,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.9"
