--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ VITE_APP_URL=http://localhost:3000
 
 # Enable or disable cookie-based authentication
 VITE_COOKIE_BASED_AUTHENTICATION=false
+VITE_HELLO=""
