--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.14.10",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@types/react-syntax-highlighter": "^15.5.11",
@@ -91,6 +91,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "vite": "^5.2.9"
   }
