--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "validate-branch-name": "^1.3.0",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "validate-branch-name": {
     "pattern": "^(main|develop){1}$|^(feature|fix|hotfix|release)/.+$",
@@ -94,6 +94,8 @@
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
-    "vite": "^5.2.9"
+    "vite": "^5.2.9",
+    "@anatine/zod-mock": "^3.13.4",
+    "@faker-js/faker": "^8.4.1"
   }
 }
